@@ -26,6 +26,7 @@ item.ganysend.itemNewSkullwitchHead.name=Witch Head
 item.ganysend.itemNewSkullzombieVillagerHead.name=Zombie Villager Head
 item.ganysend.itemNewSkullironGolemHead.name=Iron Golem Head
 item.ganysend.itemNewSkullsquidHead.name=Squid Head
+item.ganysend.itemNewSkullwitherHead.name=Wither Head
 item.ganysend.infusedGem_night.name=Night Infused Gem
 item.ganysend.infusedGem_day.name=Day Infused Gem
 item.ganysend.endiumPickaxe.name=Endium Pickaxe
