@@ -39,3 +39,4 @@ next version
 -Added: Endium Armour now can be enchanted with repair from ThaumCraft 4
 -Added: Inproved compatibility with Thaumcraft (all items have aspects, and cooking endium on the infernal furnace gives you nuggets)
 -Added: Dispenser action for infinite bucket and infused gems (place a time manipulator in front of the dispenser to use it)
+-Added: Wither Head
